--- a/app/customer.html
+++ b/app/customer.html
@@ -21,7 +21,7 @@
   <!-- Menu selector  <li class="active"><a data-toggle="tab" href="#home">Home</a></li> -->
 <div class="container">
   <center><h2>Inventory Management</h2></center>
-  <button class="btn btn-success" style="float:right;"><a href="..\app\index.html"><b style="color:black;">HOME</b></a></button>
+ <a href="..\app\index.html"> <button class="btn btn-success" style="float:right;"><b style="color:black;">HOME</b></button></a>
    <p></p>
    <b style="color:black;">
   <ul class="nav nav-tabs">
@@ -33,11 +33,6 @@
   </ul></b>
 
   <div class="tab-content">
-    
-   
-
-
-      <!-- Token -->
           <div id="menu5" class="tab-pane fade">
    
             <table class="table table-striped" >
