--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
 
       <br><br><br>
         <center>
-        <button class="btn btn-success"><a href="..\app\admin.html"><b style="color:black;">ADMIN</b></a></button><br><br>
-        <button class="btn btn-success"><a href="..\app\customer.html"><b style="color:black;">CUSTOMER</b></a></button></center>
+       <a href="..\app\admin.html"> <button class="btn btn-success"><b style="color:black;">ADMIN</b></button></a><br><br>
+       <a href="..\app\customer.html"><b style="color:black;"><button class="btn btn-success">CUSTOMER</b></button></a></center>
         <div  id="bank_list" class="nav navbar-nav navbar-right"> </div>  
      
      
