--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,8 @@
 
       <br><br><br><br><br><br><br>
         <center>
-       <a href="..\app\admin.html"> <button class="btn" style="width:50 px;"><b style="color:black;">ADMIN</b></button></a><br><br>
-       <a href="..\app\customer.html"><b style="color:black;"><button class="btn">CUSTOMER</b></button></a></center>
+       <a href="..\app\admin.html"> <button class="btn" style="height:50px;width:150px;"><b style="color:black;">ADMIN</b></button></a><br><br>
+       <a href="..\app\customer.html"><b style="color:black;"><button class="btn" style="height:50px;width:150px;">CUSTOMER</b></button></a></center>
         <div  id="bank_list" class="nav navbar-nav navbar-right"> </div>  
      
      
