--- a/app/customer.html
+++ b/app/customer.html
@@ -38,8 +38,8 @@
 }
 
             body {
-                    background:url("B.jpg");
-                    background-size: 1900px 1000PX;
+                   background:url("B.JPG");
+                    background-size: 1900px 1000px;
                 }
                 .aa,.aa9
                 {
@@ -101,7 +101,7 @@
    
  <div class="container">
     <center><h2><b style="color:black">INVENTORY MANAGEMENT</h2></center><BR><BR>
- <a href="..\app\index.html"> <button class="btn btn-success" style="float:right;"><b style="color:black;"><b class="fa fa-home">HOME</b></b></button></a>
+ <a href="/"> <button class="btn btn-success" style="float:right;"><b style="color:black;"><b class="fa fa-home">HOME</b></b></button></a>
    <p></p>
    <b style="color:black;">
   <ul class="nav nav-tabs">
