--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
  <style>
 
     body {
-      background:url("a.jpg");
+      background:url("app/a.jpg");
       background-size: 1900px 1000px;
   }
   .btn:hover{
