--- a/app/index.html
+++ b/app/index.html
@@ -8,15 +8,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="../app.js"></script>
 </head>
 <body >
- <style>
-
-  /* body {
-      background:url("app/a.jpg");
-      background-size: 1900px 1000px;
-  } */
+<style>
 
              input {
                 border: 5px solid white; 
@@ -33,11 +29,6 @@
                 background:gainsboro;
 
                 margin: 0 0 10px 0;
-              }
-
-          body {
-                 background:url("B.JPG");
-                  background-size: 1900px 1000px;
               }
               .aa,.aa9
               {
@@ -122,7 +113,7 @@
 <script>
   window.onload = function() {
             App.checkAdmin();
-        };
+ };
   
     function myFunction() {
         document.getElementById("menu1").reset();
