--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,9 @@
 </head>
 <body >
 <style>
-
+            body{
+                background-image: url('/app/images/backround.jpg')
+            }
              input {
                 border: 5px solid white; 
                 -webkit-box-shadow: 
@@ -36,7 +38,7 @@
                   height: 50px;
               }
               .y{
-                  font-size: 16pt;
+                  font-size: 12pt;
               }
               .btn:hover {
                   background-color:slategray;
@@ -44,9 +46,11 @@
               }
               .btn{
                   font-size: 13pt;
-                  height: 30px;
+                  width: 130px;
                   background-color:lightseagreen;
                   cursor: pointer;
+                  border-radius: 26px;
+                  margin-right:16px;
               }
               .nav{
                   font-size: 13pt;
@@ -58,8 +62,8 @@
             overflow: hidden;
            }             
            .design{
-              float: left;
-             max-width: 300px;
+                float: left;
+             /* max-width: 300px; */
              margin: 0;
              padding: 1em;
            }
@@ -92,9 +96,9 @@
 
 
   <!-- Menu selector  <li class="active"><a data-toggle="tab" href="#home">Home</a></li> -->
-<div class="container"><br><br>
+<div class="container-fluid"><br><br>
   
-  <h2><center><b>INVENTORY MANAGEMENT</b></center></h2>
+  <h1><center><b>INVENTORY MANAGEMENT</b></center></h1>
   
   <div id="nav-works">
   </div>
