--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 <body >
 <style>
             body{
-                background-image: url('/app/images/backround.jpg')
+                background-image: url('/app/images/2.jpg')
             }
              input {
                 border: 5px solid white; 
@@ -49,7 +49,7 @@
               .btn{
                   font-size: 13pt;
                   width: 130px;
-                  background-color:rgb(156, 58, 156);
+                  background-color: rgb(253, 169, 83);
                   cursor: pointer;
                   border-radius: 26px;
                   margin-right:16px;
